# sack-cli

./: .gitignore  CMakeLists.txt  README.md  app  config.txt
.github/workflows/: ci.yml
include/: button.hpp  label.hpp  libcli.h  libcliwrap.h  libcliwrap.hpp  room.hpp  room_utils.hpp  textbox.hpp  ui_state.hpp
include/app/: app.hpp
include/ui/common/: ui_background.hpp  ui_common.hpp  ui_state.hpp
include/ui/game/: game_cards.hpp
include/ui/layout/: table_layout.hpp
include/ui/pages/: discard_page.hpp  endconn_page.hpp  game_page.hpp  host_setting_page.hpp  in_room_page.hpp  play_phase_page.hpp  room_info_page.hpp  rules_page.hpp  settlement_page.hpp  starthand_page.hpp  username_page.hpp
include/ui/widgets/: bid_panel.hpp  button.hpp  card_widget.hpp  color_selector.hpp  game_cards.hpp  hand_panel.hpp  label.hpp  player_seat.hpp  textbox.hpp  ui_element.hpp
src/: libcli.c  libcliwrap.cpp  main.cpp  room.cpp  room_utils.cpp
src/ui/common/: ui_background.cpp  ui_common.cpp
src/ui/pages/: discard_page.cpp  endconn_page.cpp  game_page.cpp  host_setting_page.cpp  in_room_page.cpp  play_phase_page.cpp  room_info_page.cpp  rules_page.cpp  settlement_page.cpp  starthand_page.cpp  username_page.cpp
src/ui/widgets/: bid_panel.cpp
